# ga-symbolic-solver

./: LICENSE  symbolic-solver.cabal  symsolve.cabal
src/Math/: Basis.hs  MV.hs
src/Math/MV/: Elem.hs  Scalar.hs
src/Symbolic/: GA.hs  Scalar.hs
test/: Main.hs
