cabal-version: 3.4
name: symbolic-solver
version: 0.1.0.0

license: MIT
license-file: LICENSE
author: Tom Cumming
maintainer: mail@tomcumming.co.uk

category: Math
extra-doc-files: CHANGELOG.md

common shared
    ghc-options: -Wall
    default-language: GHC2021
    default-extensions: MultiWayIf, LambdaCase
    build-depends: base ^>=4.16, containers, mtl

library
    import: shared
    exposed-modules: Symbolic.Scalar, Symbolic.GA
    hs-source-dirs: src

test-suite symbolic-solver-test
    import: shared
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    build-depends:
        symbolic-solver,
        tasty,
        tasty-hunit
