cabal-version:      3.0
name:               symsolve
version:            0.1.0.0

license: MIT
license-file: LICENSE
author: Tom Cumming

category: Math

library
  exposed-modules:
    Math.Basis
    Math.MV
    Math.MV.Elem
    Math.MV.Scalar
  build-depends:
    base >=4,
    relude,
    containers
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
      -Wall
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TupleSections
    MultiWayIf
    TypeSynonymInstances
    FlexibleInstances
